new: add targets processing and a very minimal working example

--- a/smithery.cfg
+++ b/smithery.cfg
@@ -1,3 +1,4 @@
 [smithery]  
-sources = smithery.mine:raster
-targets = smithery.metadata:inspire:${buildout:directory}
+sources = smithery.mine:file
+targets = smithery.forge:display
+
