new: prepare the products that will host the custom recipes

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,19 @@
 [buildout]
-parts = deploy
-develop = .
+parts =
+    deploy
+    test
+develop = src/*
 
 [deploy]
 recipe = zc.recipe.egg
-eggs = smithery
+eggs =
+    smithery
+    smithery.recipe.miners
+    smithery.recipe.smiths
+
+[test]
+recipe = zc.recipe.testrunner
+eggs =
+    smithery [tests]
+    smithery.recipe.miners [tests]
+    smithery.recipe.smiths [tests]
