new: [BROKEN] example of the new style configuration. More similar to vanilla buildout.

--- a/smithery.cfg
+++ b/smithery.cfg
@@ -1,4 +1,19 @@
 [smithery]  
-sources = smithery.mine:file
-targets = smithery.forge:display
+sources =
+    metadata_root
+    folder_metadata
+targets =
+    html_folder
 
+
+[metadata_root]
+recipe = smithery.recipe.miner:namespace
+author = Alessandro Amici
+
+[folder_metadata]
+recipe = smithery.recipe.miner:folder
+
+[html_folder]
+recipe = smithery.recipe.smiths:chameleon
+template = folder.pt
+target = folder.html
