--- a/smithery.cfg
+++ b/smithery.cfg
@@ -7,11 +7,11 @@ targets =
 
 
 [metadata_root]
-recipe = smithery.recipe.miner:namespace
+recipe = smithery.recipe.miners:namespace
 author = Alessandro Amici
 
 [folder_metadata]
-recipe = smithery.recipe.miner:folder
+recipe = smithery.recipe.miners:folder
 
 [html_folder]
 recipe = smithery.recipe.smiths:chameleon
