new: big chaotic commit with way too much stuff, sorry :(

--- a/buildout-smithery.cfg
+++ b/buildout-smithery.cfg
@@ -1,12 +1,5 @@
 [buildout]
-extends = smithery.cfg
-parts = smithery
+extends = src/smithery/examples/smithery.cfg
+parts = ${smithery:parts}
 installed =
-bin-directory = . 
-eggs-directory = .
-develop-eggs-directory = .
-parts-directory = .
 develop = src/*
-
-[smithery]
-recipe = smithery
