new: add an example for the csv recipe

--- a/src/smithery/examples/csv.cfg
+++ b/src/smithery/examples/csv.cfg
@@ -2,20 +2,21 @@
 parts =
 # sources
     metadata_root
-    folder_metadata
+    csv_data
 # targets
-    html_folder
+    html_data
 
 
 [metadata_root]
 recipe = smithery.recipe.miners:namespace
 author = Alessandro Amici
 
-[folder_metadata]
-recipe = smithery.recipe.miners:folder
-source = .
+[csv_data]
+recipe = smithery.recipe.miners:csv
+source = csv.csv
 
-[html_folder]
+
+[html_data]
 recipe = smithery.recipe.smiths:chameleon
-template = folder.pt
-target = folder.html
+template = csv.pt
+target = csv.html
