new: allow override the default namespace key where to put the results of a recipe

--- a/src/smithery/examples/csv.cfg
+++ b/src/smithery/examples/csv.cfg
@@ -14,7 +14,7 @@ author = Alessandro Amici
 [csv_data]
 recipe = smithery.recipe.miners:csv
 source = csv.csv
-
+namespace-key = data
 
 [html_data]
 recipe = smithery.recipe.smiths:chameleon
