new: add a trivail example for Cheetah tempaltes

--- a/src/smithery/examples/folder.cfg
+++ b/src/smithery/examples/folder.cfg
@@ -5,6 +5,7 @@ parts =
     folder_metadata
 # targets
     html_folder
+    txt_folder
 
 
 [metadata_root]
@@ -19,3 +20,9 @@ source = .
 recipe = smithery.recipe.smiths:chameleon
 template = folder.pt
 target = folder.html
+
+[txt_folder]
+recipe = smithery.recipe.smiths:cheetah
+template = folder.txt.in
+target = folder.txt
+
