bugfix: sync with smithery command invocation (args is still missing)

--- a/buildout-smithery.cfg
+++ b/buildout-smithery.cfg
@@ -3,3 +3,7 @@ extends = src/smithery/examples/smithery.cfg
 parts = ${smithery:parts}
 installed =
 develop = src/*
+offline = true
+
+[smithery]
+recipe = smithery
