new: use external smithery.recipe.miners (2)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,9 @@ parts =
     test
 develop = src/*
 
+[sources]
+smithery.recipe.miners = git git@github.com:alexamici/smithery.recipe.miners.git
+
 [deploy]
 recipe = zc.recipe.egg
 eggs =
