new: add auto-checkout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,6 +6,7 @@ parts =
     deploy
     test
 develop = src/*
+auto-checkout = *
 
 [sources]
 smithery.recipe.miners = git git@github.com:alexamici/smithery.recipe.miners.git
