new: use external smithery.recipe.smiths

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,11 +5,12 @@ extensions =
 parts =
     deploy
     test
-develop = src/*
+develop = src/smithery
 auto-checkout = *
 
 [sources]
 smithery.recipe.miners = git git@github.com:alexamici/smithery.recipe.miners.git
+smithery.recipe.smiths = git git@github.com:alexamici/smithery.recipe.smiths.git
 
 [deploy]
 recipe = zc.recipe.egg
