new: add a useful python interpreter with all packages

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,6 +18,7 @@ eggs =
     smithery
     smithery.recipe.miners
     smithery.recipe.smiths
+interpreter = python
 
 [test]
 recipe = zc.recipe.testrunner
