new: skel documentation with sphinx

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -26,3 +26,8 @@ eggs =
     smithery [tests]
     smithery.recipe.miners [tests]
     smithery.recipe.smiths [tests]
+
+[docs]
+recipe = collective.recipe.sphinxbuilder
+source = ${buildout:directory}/docs
+interpreter = ${buildout:directory}/bin/python
