--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,7 @@ parts =
     test
 develop = src/smithery
 auto-checkout = *
+dump-picked-versions-file = versions.cfg
 
 [sources]
 smithery.recipe.miners = git git@github.com:alexamici/smithery.recipe.miners.git
