--- a/versions.cfg
+++ b/versions.cfg
@@ -1,14 +1,15 @@
 [versions]
 Markdown = 2.0.3
-distribute = 0.6.10
-mr.developer = 1.13
-zc.recipe.egg = 1.2.2
-zc.recipe.testrunner = 1.2.0
-zope.testing = 3.9.4
+distribute = 0.6.14
+mr.developer = 1.15
+z3c.recipe.scripts = 1.0.1
+zc.recipe.egg = 1.3.2
+zc.recipe.testrunner = 1.4.0
+zope.testing = 3.10.0
 
 #Required by:
 #smithery.recipe.smiths 0.1
-Chameleon = 1.2.3
+Chameleon = 1.2.12
 
 #Required by:
 #smithery.recipe.smiths 0.1
@@ -19,19 +20,23 @@ Cheetah = 2.4.2.1
 OWSLib = 0.3.1
 
 #Required by:
-#mr.developer 1.13
+#mr.developer 1.15
 argparse = 1.1
 
 #Required by:
-#mr.developer 1.13
+#mr.developer 1.15
 #smithery.recipe.miners 0.1
 #smithery.recipe.smiths 0.1
-zc.buildout = 1.4.3
+zc.buildout = 1.5.1
 
 #Required by:
-#zope.testing 3.9.4
-zope.exceptions = 3.5.2
+#zope.testrunner 4.0.0b5
+zope.exceptions = 3.6.1
 
 #Required by:
-#zope.testing 3.9.4
-zope.interface = 3.5.3
+#zope.testrunner 4.0.0b5
+zope.interface = 3.6.1
+
+#Required by:
+#zc.recipe.testrunner 1.4.0
+zope.testrunner = 4.0.0b5
