new: add docs as default target and sync versions

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,6 +5,7 @@ extensions =
 parts =
     deploy
     test
+    docs
 develop = src/smithery
 auto-checkout = *
 dump-picked-versions-file = versions.cfg
