--- a/versions.cfg
+++ b/versions.cfg
@@ -1,42 +1,45 @@
 [versions]
+Jinja2 = 2.5.5
 Markdown = 2.0.3
+Sphinx = 1.0.5
+collective.recipe.sphinxbuilder = 0.7.0
 distribute = 0.6.14
-mr.developer = 1.15
+mr.developer = 1.16
 z3c.recipe.scripts = 1.0.1
-zc.recipe.egg = 1.3.2
 zc.recipe.testrunner = 1.4.0
-zope.testing = 3.10.0
+zope.testing = 3.10.2
 
 #Required by:
 #smithery.recipe.smiths 0.1
-Chameleon = 1.2.12
+Chameleon = 1.2.13
 
 #Required by:
 #smithery.recipe.smiths 0.1
-Cheetah = 2.4.2.1
+Cheetah = 2.4.4
 
 #Required by:
 #smithery.recipe.miners 0.1
 OWSLib = 0.3.1
 
 #Required by:
-#mr.developer 1.15
-argparse = 1.1
+#collective.recipe.sphinxbuilder 0.7.0
+docutils = 0.7
 
 #Required by:
-#mr.developer 1.15
+#mr.developer 1.16
 #smithery.recipe.miners 0.1
 #smithery.recipe.smiths 0.1
-zc.buildout = 1.5.1
+#collective.recipe.sphinxbuilder 0.7.0
+zc.buildout = 1.5.2
 
 #Required by:
-#zope.testrunner 4.0.0b5
+#collective.recipe.sphinxbuilder 0.7.0
+zc.recipe.egg = 1.3.2
+
+#Required by:
+#zope.testrunner 4.0.0
 zope.exceptions = 3.6.1
 
 #Required by:
-#zope.testrunner 4.0.0b5
-zope.interface = 3.6.1
-
-#Required by:
 #zc.recipe.testrunner 1.4.0
-zope.testrunner = 4.0.0b5
+zope.testrunner = 4.0.0
