new: user http read-only URL for git sources (use set-url --push for development)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,8 +11,8 @@ auto-checkout = *
 dump-picked-versions-file = versions.cfg
 
 [sources]
-smithery.recipe.miners = git git@github.com:alexamici/smithery.recipe.miners.git
-smithery.recipe.smiths = git git@github.com:alexamici/smithery.recipe.smiths.git
+smithery.recipe.miners = git git://github.com/alexamici/smithery.recipe.miners.git
+smithery.recipe.smiths = git git://github.com/alexamici/smithery.recipe.smiths.git
 
 [deploy]
 recipe = zc.recipe.egg
