new: add develop part

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,6 +5,7 @@ extensions =
 parts =
     deploy
     test
+    develop
     docs
 develop = src/smithery
 auto-checkout = *
@@ -28,6 +29,14 @@ eggs =
     smithery.recipe.miners [tests]
     smithery.recipe.smiths [tests]
     smithery [tests]
+
+[develop]
+recipe = zc.recipe.egg
+eggs =
+    ${deploy:eggs}
+    z3c.coverage
+    ipython
+scripts = ipython coverage
 
 [docs]
 recipe = collective.recipe.sphinxbuilder
