--- a/versions.cfg
+++ b/versions.cfg
@@ -4,7 +4,9 @@ Markdown = 2.0.3
 Sphinx = 1.0.5
 collective.recipe.sphinxbuilder = 0.7.0
 distribute = 0.6.14
+ipython = 0.10.1
 mr.developer = 1.16
+z3c.coverage = 1.2.0
 z3c.recipe.scripts = 1.0.1
 zc.recipe.testrunner = 1.4.0
 zope.testing = 3.10.2
@@ -18,7 +20,7 @@ Chameleon = 1.2.13
 Cheetah = 2.4.4
 
 #Required by:
-#smithery.recipe.miners 0.1
+#smithery.recipe.miners 0.2
 OWSLib = 0.3.1
 
 #Required by:
@@ -27,8 +29,8 @@ docutils = 0.7
 
 #Required by:
 #mr.developer 1.16
-#smithery.recipe.miners 0.1
 #smithery.recipe.smiths 0.1
+#smithery.recipe.miners 0.2
 #collective.recipe.sphinxbuilder 0.7.0
 zc.buildout = 1.5.2
 
