new: nre dependency?

--- a/versions.cfg
+++ b/versions.cfg
@@ -1,6 +1,7 @@
 [versions]
 Jinja2 = 2.5.5
 Markdown = 2.0.3
+Pygments = 1.4
 Sphinx = 1.0.5
 collective.recipe.sphinxbuilder = 0.7.0
 distribute = 0.6.14
