--- a/versions.cfg
+++ b/versions.cfg
@@ -2,7 +2,7 @@
 Jinja2 = 2.5.5
 Markdown = 2.0.3
 Pygments = 1.4
-Sphinx = 1.0.5
+Sphinx = 1.0.6
 collective.recipe.sphinxbuilder = 0.7.0
 distribute = 0.6.14
 ipython = 0.10.1
@@ -25,6 +25,10 @@ Cheetah = 2.4.4
 OWSLib = 0.3.1
 
 #Required by:
+#mr.developer 1.16
+argparse = 1.1
+
+#Required by:
 #collective.recipe.sphinxbuilder 0.7.0
 docutils = 0.7
 
@@ -42,6 +46,10 @@ zc.recipe.egg = 1.3.2
 #Required by:
 #zope.testrunner 4.0.0
 zope.exceptions = 3.6.1
+
+#Required by:
+#zope.testrunner 4.0.0
+zope.interface = 3.6.1
 
 #Required by:
 #zc.recipe.testrunner 1.4.0
