new: merged back the smithery.recipe.smiths into the main repo

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,13 +7,14 @@ parts =
     test
     develop
     docs
-develop = src/smithery
+develop =
+    src/smithery
+    src/smithery.recipe.smiths
 auto-checkout = *
 dump-picked-versions-file = versions.cfg
 
 [sources]
 smithery.recipe.miners = git git://github.com/alexamici/smithery.recipe.miners.git
-smithery.recipe.smiths = git git://github.com/alexamici/smithery.recipe.smiths.git
 
 [deploy]
 recipe = zc.recipe.egg
