new: merge smithery.recipe.miners into smithery main repo      and lose all the commit history (sigh!)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,12 +9,12 @@ parts =
     docs
 develop =
     src/smithery
+    src/smithery.recipe.miners
     src/smithery.recipe.smiths
 auto-checkout = *
 dump-picked-versions-file = versions.cfg
 
 [sources]
-smithery.recipe.miners = git git://github.com/alexamici/smithery.recipe.miners.git
 
 [deploy]
 recipe = zc.recipe.egg
