new: move base smiths to base.py and start new xpath recipe

--- a/examples/csv.cfg
+++ b/examples/csv.cfg
@@ -4,7 +4,7 @@ parts =
     metadata_root
     csv_data
 # targets
-    html_data
+    xml_data
 
 
 [metadata_root]
@@ -16,7 +16,12 @@ recipe = smithery.recipe.miners:csv
 source = csv.csv
 namespace-key = data
 
-[html_data]
-recipe = smithery.recipe.smiths:chameleon
-template = csv.pt
-target = csv.html
+[xml_data]
+recipe = smithery.recipe.smiths:xpath
+rules = xml_rules
+namespace-key = ${csv_data:namespace-key}
+template = csv.xml
+target = csv-1.xml
+
+[xml_rules]
+/event/when = date
