--- a/versions.cfg
+++ b/versions.cfg
@@ -4,44 +4,45 @@ Markdown = 2.0.3
 Pygments = 1.4
 Sphinx = 1.0.7
 collective.recipe.sphinxbuilder = 0.7.0
-ipython = 0.10.1
-mr.developer = 1.16
-z3c.coverage = 1.2.0
+distribute = 0.6.14
+mr.developer = 1.17
 z3c.recipe.scripts = 1.0.1
+zc.recipe.egg = 1.3.2
 zc.recipe.testrunner = 1.4.0
 zope.testing = 3.10.2
 
 #Required by:
-#smithery.recipe.smiths 0.1
-Chameleon = 1.2.13
+#smithery.recipe.smiths 0.3
+Chameleon = 1.3.0-rc1
 
 #Required by:
-#smithery.recipe.smiths 0.1
+#smithery.recipe.smiths 0.3
 Cheetah = 2.4.4
 
 #Required by:
-#smithery.recipe.miners 0.2
+#smithery.recipe.miners 0.3
 OWSLib = 0.3.1
+
+#Required by:
+#mr.developer 1.17
+argparse = 1.1
 
 #Required by:
 #collective.recipe.sphinxbuilder 0.7.0
 docutils = 0.7
 
 #Required by:
-#mr.developer 1.16
-#smithery.recipe.smiths 0.1
-#smithery.recipe.miners 0.2
-#collective.recipe.sphinxbuilder 0.7.0
+#mr.developer 1.17
 zc.buildout = 1.5.2
 
 #Required by:
-#collective.recipe.sphinxbuilder 0.7.0
-zc.recipe.egg = 1.3.2
-
-#Required by:
-#zope.testrunner 4.0.0
+#zope.testrunner 4.0.1
 zope.exceptions = 3.6.1
 
 #Required by:
+#zope.testrunner 4.0.1
+zope.interface = 3.6.1
+
+#Required by:
 #zc.recipe.testrunner 1.4.0
-zope.testrunner = 4.0.0
+zope.testrunner = 4.0.1
