bugfix: last bit of the rename

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,7 +8,7 @@ parts =
     develop
     docs
 develop =
-    src/smithery
+    src/smithery.app
     src/smithery.recipe.miners
     src/smithery.recipe.smiths
 auto-checkout = *
@@ -21,7 +21,7 @@ recipe = zc.recipe.egg
 eggs =
     smithery.recipe.miners
     smithery.recipe.smiths
-    smithery
+    smithery.app
 interpreter = python
 
 [test]
@@ -29,7 +29,7 @@ recipe = zc.recipe.testrunner
 eggs =
     smithery.recipe.miners [tests]
     smithery.recipe.smiths [tests]
-    smithery [tests]
+    smithery.app [tests]
 
 [develop]
 recipe = zc.recipe.egg
