--- a/versions.cfg
+++ b/versions.cfg
@@ -5,9 +5,10 @@ Pygments = 1.4
 Sphinx = 1.0.7
 collective.recipe.sphinxbuilder = 0.7.0
 distribute = 0.6.14
+ipython = 0.10.1
 mr.developer = 1.17
+z3c.coverage = 1.2.0
 z3c.recipe.scripts = 1.0.1
-zc.recipe.egg = 1.3.2
 zc.recipe.testrunner = 1.4.0
 zope.testing = 3.10.2
 
@@ -33,7 +34,14 @@ docutils = 0.7
 
 #Required by:
 #mr.developer 1.17
+#smithery.recipe.miners 0.3
+#smithery.recipe.smiths 0.3
+#collective.recipe.sphinxbuilder 0.7.0
 zc.buildout = 1.5.2
+
+#Required by:
+#collective.recipe.sphinxbuilder 0.7.0
+zc.recipe.egg = 1.3.2
 
 #Required by:
 #zope.testrunner 4.0.1
