new: drop unused mr.developer dependency new: pin Chameloen version at 1.2.7

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,9 @@
 [buildout]
 extensions =
-    mr.developer
     buildout.dumppickedversions
+dump-picked-versions-file = versions.cfg
+versions = versions
+
 parts =
     deploy
     test
@@ -11,10 +13,9 @@ develop =
     src/smithery.app
     src/smithery.recipe.miners
     src/smithery.recipe.smiths
-auto-checkout = *
-dump-picked-versions-file = versions.cfg
 
-[sources]
+[versions]
+Chameleon = 1.2.7
 
 [deploy]
 recipe = zc.recipe.egg
