--- a/versions.cfg
+++ b/versions.cfg
@@ -1,9 +1,11 @@
 [versions]
-Jinja2 = 2.5.5
+Jinja2 = 2.6
 Markdown = 2.0.3
+Pygments = 1.4
 Sphinx = 1.0.7
 collective.recipe.sphinxbuilder = 0.7.0
-distribute = 0.6.19
+distribute = 0.6.21
+ipython = 0.11
 z3c.coverage = 1.2.0
 z3c.recipe.scripts = 1.0.1
 zc.recipe.testrunner = 1.4.0
@@ -19,7 +21,7 @@ OWSLib = 0.3.1
 
 #Required by:
 #collective.recipe.sphinxbuilder 0.7.0
-docutils = 0.7
+docutils = 0.8.1
 
 #Required by:
 #smithery.recipe.miners 0.3
@@ -34,6 +36,10 @@ zc.recipe.egg = 1.3.2
 #Required by:
 #zope.testrunner 4.0.3
 zope.exceptions = 3.6.1
+
+#Required by:
+#zope.testrunner 4.0.3
+zope.interface = 3.7.0
 
 #Required by:
 #zc.recipe.testrunner 1.4.0
